[package]
name = "check-att"
version = "0.1.0"
edition = "2021"
authors = ["Sam Miller"]
description = "A small script to check if a house has ATT fiber availible"
repository = "https://github.com/sithpow/att_availability_checker"
homepage = "https://sithpow.github.io/att_availability_checker/"
documentation = "https://sithpow.github.io/att_availability_checker/"
license-file = "LICENSE.txt"
keywords = ["att fiber", "simple"]
categories = ["command-line-utilities"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
exitfailure = "0.5.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
structopt = "0.3.26"
tokio = { version = "1.24.2", features = ["full"] }
