[package]
name = "check-att"
version = "0.1.1"
edition = "2021"
authors = ["Sam Miller"]
description = "A small script to check if a house has ATT fiber availible"
repository = "https://github.com/sithpow/att_availability_checker"
homepage = "https://sithpow.github.io/att_availability_checker/"
documentation = "https://sithpow.github.io/att_availability_checker/"
license-file = "LICENSE.txt"
keywords = ["cli", "simple"]
categories = ["command-line-utilities"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
