[package]
name = "check-att"
version = "0.1.2"
edition = "2021"
authors = ["Sam Miller"]
description = "A small script to check if a house has ATT fiber availible"
repository = "https://github.com/s-mil/att_availability_checker"
homepage = "https://s-mil.github.io/att_availability_checker/"
documentation = "https://s-mil.github.io/att_availability_checker/"
license-file = "LICENSE.txt"
keywords = ["cli", "simple"]
categories = ["command-line-utilities"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.191"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
